feat: request khronos gltf sample from remote

--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
   <body>
     <div class="container">
       <canvas id="glcanvas" width="1280" height="720"></canvas>
+
+      <select id="gltf-samples" class="dropdown">
+        <option value="">-</option>
+        <option value="Avocado/glTF/Avocado.gltf">Avocado</option>
+        <option value="BoxVertexColors/glTF/BoxVertexColors.gltf">BoxVertexColors</option>
+        <option value="FlightHelmet/glTF/FlightHelmet.gltf">FlightHelmet</option>
+        <option value="OrientationTest/glTF/OrientationTest.gltf">OrientationTest</option>
+        <option value="AnimatedCube/glTF/AnimatedCube.gltf">AnimatedCube</option>
+        <option value="BoxAnimated/glTF/BoxAnimated.gltf">BoxAnimated</option>
+        <option value="RiggedSimple/glTF/RiggedSimple.gltf">RiggedSimple</option>
+        <option value="RiggedFigure/glTF/RiggedFigure.gltf">RiggedFigure</option>
+        <option value="BrainStem/glTF/BrainStem.gltf">BrainStem</option>
+        <option value="Fox/glTF/Fox.gltf">Fox</option>
+        <option value="Sponza/glTF/Sponza.gltf">Sponza</option>
+      </select>
     </div>
   </body>
   
