feat: load buffer and textures

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <option value="Avocado/glTF/Avocado.gltf">Avocado</option>
         <option value="BoxVertexColors/glTF/BoxVertexColors.gltf">BoxVertexColors</option>
         <option value="FlightHelmet/glTF/FlightHelmet.gltf">FlightHelmet</option>
+        <option value="BoxTextured/glTF/BoxTextured.gltf">BoxTextured</option>
+        <option value="BoxTextured/glTF-Embedded/BoxTextured.gltf">BoxTextured (Embedded)</option>
         <option value="OrientationTest/glTF/OrientationTest.gltf">OrientationTest</option>
         <option value="AnimatedCube/glTF/AnimatedCube.gltf">AnimatedCube</option>
         <option value="BoxAnimated/glTF/BoxAnimated.gltf">BoxAnimated</option>
