--- a/index.html
+++ b/index.html
@@ -44,18 +44,19 @@
   
   <script type="x-shader/x-vertex" id="vertex-shader">
     attribute vec4 aVertexPosition;
-    attribute vec3 aVertexNormal;
+    // attribute vec3 aVertexNormal;
     attribute vec2 aTextureCoord;
 
-    uniform mat4 uNormalMatrix;
-    uniform mat4 uModelViewMatrix;
+    // uniform mat4 uNormalMatrix;
+    uniform mat4 uModelMatrix;
+    uniform mat4 uViewMatrix;
     uniform mat4 uProjectionMatrix;
 
     varying highp vec2 vTextureCoord;
-    varying highp vec3 vLighting;
+    // varying highp vec3 vLighting;
 
     void main(void) {
-      gl_Position = uProjectionMatrix * uModelViewMatrix * aVertexPosition;
+      gl_Position = uProjectionMatrix * uViewMatrix * uModelMatrix * aVertexPosition;
       vTextureCoord = aTextureCoord;
 
       // Apply lighting effect
@@ -64,22 +65,24 @@
       highp vec3 directionalLightColor = vec3(1, 1, 1);
       highp vec3 directionalVector = normalize(vec3(0.85, 0.8, 0.75));
 
-      highp vec4 transformedNormal = uNormalMatrix * vec4(aVertexNormal, 1.0);
+      // highp vec4 transformedNormal = uNormalMatrix * vec4(aVertexNormal, 1.0);
 
-      highp float directional = max(dot(transformedNormal.xyz, directionalVector), 0.0);
-      vLighting = ambientLight + (directionalLightColor * directional);
+      // highp float directional = max(dot(transformedNormal.xyz, directionalVector), 0.0);
+      // vLighting = ambientLight + (directionalLightColor * directional);
     }
   </script>
   <script type="x-shader/x-fragment" id="fragment-shader">
     varying highp vec2 vTextureCoord;
-    varying highp vec3 vLighting;
+    // varying highp vec3 vLighting;
 
     uniform sampler2D uSampler;
 
     void main(void) {
       highp vec4 texelColor = texture2D(uSampler, vTextureCoord);
 
-      gl_FragColor = vec4(texelColor.rgb * vLighting, texelColor.a);
+      // gl_FragColor = vec4(texelColor.rgb * vLighting, texelColor.a);
+      gl_FragColor = vec4(texelColor.rgb, 1.0);
+      // gl_FragColor = vec4(1., 1., 0., 1.);
     }
   </script>
   <script src="script.js" defer></script>
