--- a/index.html
+++ b/index.html
@@ -23,22 +23,27 @@
         </div>
       </div>
 
-      <select id="gltf-samples" class="dropdown">
-        <option value="">-</option>
-        <option value="Avocado/glTF/Avocado.gltf">Avocado</option>
-        <option value="BoxVertexColors/glTF/BoxVertexColors.gltf">BoxVertexColors</option>
-        <option value="FlightHelmet/glTF/FlightHelmet.gltf">FlightHelmet</option>
-        <option value="BoxTextured/glTF/BoxTextured.gltf">BoxTextured</option>
-        <option value="BoxTextured/glTF-Embedded/BoxTextured.gltf">BoxTextured (Embedded)</option>
-        <option value="OrientationTest/glTF/OrientationTest.gltf">OrientationTest</option>
-        <option value="AnimatedCube/glTF/AnimatedCube.gltf">AnimatedCube</option>
-        <option value="BoxAnimated/glTF/BoxAnimated.gltf">BoxAnimated</option>
-        <option value="RiggedSimple/glTF/RiggedSimple.gltf">RiggedSimple</option>
-        <option value="RiggedFigure/glTF/RiggedFigure.gltf">RiggedFigure</option>
-        <option value="BrainStem/glTF/BrainStem.gltf">BrainStem</option>
-        <option value="Fox/glTF/Fox.gltf">Fox</option>
-        <option value="Sponza/glTF/Sponza.gltf">Sponza</option>
-      </select>
+      <div class="actions">
+        <select id="gltf-samples" class="dropdown" style="display: inline-block;">
+          <option value="">-</option>
+          <option value="Avocado/glTF/Avocado.gltf">Avocado</option>
+          <option value="BoxVertexColors/glTF/BoxVertexColors.gltf">BoxVertexColors</option>
+          <option value="FlightHelmet/glTF/FlightHelmet.gltf">FlightHelmet</option>
+          <option value="BoxTextured/glTF/BoxTextured.gltf">BoxTextured</option>
+          <option value="BoxTextured/glTF-Embedded/BoxTextured.gltf">BoxTextured (Embedded)</option>
+          <option value="OrientationTest/glTF/OrientationTest.gltf">OrientationTest</option>
+          <option value="AnimatedCube/glTF/AnimatedCube.gltf">AnimatedCube</option>
+          <option value="BoxAnimated/glTF/BoxAnimated.gltf">BoxAnimated</option>
+          <option value="RiggedSimple/glTF/RiggedSimple.gltf">RiggedSimple</option>
+          <option value="RiggedFigure/glTF/RiggedFigure.gltf">RiggedFigure</option>
+          <option value="BrainStem/glTF/BrainStem.gltf">BrainStem</option>
+          <option value="Fox/glTF/Fox.gltf">Fox</option>
+          <option value="Sponza/glTF/Sponza.gltf">Sponza</option>
+        </select>
+        <p>
+          Dragging Mouse-Right Up/Down: Zoom In/Out
+        </p>
+      </div>
     </div>
   </body>
   
