feat(interactive): drag right mouse or wheel to scale

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           <option value="Fox/glTF/Fox.gltf">Fox</option>
           <option value="Sponza/glTF/Sponza.gltf">Sponza</option>
         </select>
-        <p>
-          Dragging Mouse-Right Up/Down: Zoom In/Out
-        </p>
+        <ul>
+          <li><b>To scale,</b> Drag with right mouse button / Rotates a mouse wheel</li>
+        </ul>
       </div>
     </div>
   </body>
