feat(interactive): drag with left mouse to rotate

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <option value="Sponza/glTF/Sponza.gltf">Sponza</option>
         </select>
         <ul>
+          <li><b>To rotate,</b> Drag with left mouse button</li>
           <li><b>To scale,</b> Drag with right mouse button / Rotates a mouse wheel</li>
         </ul>
       </div>
