feat(interactive): drag with middle mouse to padding camera

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </select>
         <ul>
           <li><b>To rotate,</b> Drag with left mouse button</li>
+          <li><b>To move camera,</b> Drag with middle mouse button</li>
           <li><b>To scale,</b> Drag with right mouse button / Rotates a mouse wheel</li>
         </ul>
       </div>
