--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     attribute vec4 aVertexColor;
     
     uniform bool aHasVertexColor;
-    // uniform mat4 uNormalMatrix;
+    uniform mat4 uNormalMatrix;
     uniform mat4 uModelMatrix;
     uniform mat4 uViewMatrix;
     uniform mat4 uProjectionMatrix;
 
     varying highp vec2 vTextureCoord;
     varying highp vec4 vVertexColor;
-    // varying highp vec3 vLighting;
+    varying highp vec3 vLighting;
 
     void main(void) {
       gl_Position = uProjectionMatrix * uViewMatrix * uModelMatrix * aVertexPosition;
@@ -75,29 +75,27 @@
       }
 
       // Apply lighting effect
-
       highp vec3 ambientLight = vec3(0.3, 0.3, 0.3);
       highp vec3 directionalLightColor = vec3(1, 1, 1);
-      highp vec3 directionalVector = normalize(vec3(0.85, 0.8, 0.75));
+      highp vec3 directionalVector = normalize(vec3(0.5, 0.3, 0.8));
 
-      // highp vec4 transformedNormal = uNormalMatrix * vec4(aVertexNormal, 1.0);
+      highp vec4 transformedNormal = normalize(uNormalMatrix * vec4(aVertexNormal, 1.0));
 
-      // highp float directional = max(dot(transformedNormal.xyz, directionalVector), 0.0);
-      // vLighting = ambientLight + (directionalLightColor * directional);
+      highp float directional = max(dot(transformedNormal.xyz, directionalVector), 0.0);
+      vLighting = ambientLight + (directionalLightColor * directional);
     }
   </script>
   <script type="x-shader/x-fragment" id="fragment-shader">
     varying highp vec2 vTextureCoord;
     varying highp vec4 vVertexColor;
-    // varying highp vec3 vLighting;
+    varying highp vec3 vLighting;
 
     uniform sampler2D uSampler;
 
     void main(void) {
       highp vec4 texelColor = texture2D(uSampler, vTextureCoord);
 
-      // gl_FragColor = vec4(texelColor.rgb * vLighting, texelColor.a);
-      gl_FragColor = vec4(texelColor.rgb, 1.0) * vVertexColor;
+      gl_FragColor = vec4(texelColor.rgb * vLighting, 1.0) * vVertexColor;
     }
   </script>
   <script src="script.js" defer></script>
