--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <body>
     <div class="container">
+      <div class="error-message" id="error-message"></div>
       <div style="position: relative;">
         <canvas id="glcanvas" width="1280" height="720"></canvas>
         <div class="loading-overlay">
