--- a/index.html
+++ b/index.html
@@ -25,44 +25,49 @@
       </div>
 
       <div class="actions">
-        <select id="gltf-samples" class="dropdown" style="display: inline-block;">
-          <option value="">-</option>
-          <!-- Core -->
-          <optgroup label="Core">
-            <option value="Avocado/glTF/Avocado.gltf">Avocado</option>
-            <option value="BoomBox/glTF/BoomBox.gltf">Boom Box</option>
-            <option value="FlightHelmet/glTF/FlightHelmet.gltf">Flight Helmet</option>
-            <option value="SciFiHelmet/glTF/SciFiHelmet.gltf Sci-Fi">Helmet</option>
-            <option value="Suzanne/glTF/Suzanne.gltf">Suzanne</option>
-            <option value="DamagedHelmet/glTF/DamagedHelmet.gltf">Damaged Helmet</option>
-            <option value="WaterBottle/glTF/WaterBottle.gltf">Water Bottle</option>
-          </optgroup>
-          <!-- Standard -->
-          <optgroup label="Standard">
-            <option value="Box/glTF/Box.gltf">Box</option>
-            <option value="BoxInterleaved/glTF/BoxInterleaved.gltf">Box Interleaved</option>
-            <option value="BoxTextured/glTF/BoxTextured.gltf">Box Textured</option>
-            <option value="BoxTextured/glTF-Embedded/BoxTextured.gltf">Box Textured (Embedded)</option>
-            <option value="Box%20With%20Spaces/glTF/Box%20With%20Spaces.gltf">Box With Spaces</option>
-            <option value="BoxVertexColors/glTF/BoxVertexColors.gltf">Box Vertex Colors</option>
-            <option value="AnimatedCube/glTF/AnimatedCube.gltf">Animated Cube</option>
-            <option value="Duck/glTF/Duck.gltf">Duck</option>
-            <option value="2CylinderEngine/glTF/2CylinderEngine.gltf">2 Cylinder Engine</option>
-            <option value="GearboxAssy/glTF/GearboxAssy.gltf">Gearbox Assy</option>
-            <option value="BoxAnimated/glTF/BoxAnimated.gltf">Box Animated</option>
-            <option value="CesiumMilkTruck/glTF/CesiumMilkTruck.gltf">Cesium Milk Truck</option>
-            <option value="RiggedSimple/glTF/RiggedSimple.gltf">Rigged Simple</option>
-            <option value="RiggedFigure/glTF/RiggedFigure.gltf">Rigged Figure</option>
-            <option value="BrainStem/glTF/BrainStem.gltf">Brain Stem</option>
-            <option value="Fox/glTF/Fox.gltf">Fox</option>
-            <option value="Sponza/glTF/Sponza.gltf">Sponza</option>
-          </optgroup>
-          <!-- Feature Tests -->
-          <optgroup label="Feature Tests">
-            <option value="OrientationTest/glTF/OrientationTest.gltf">Orientation Test</option>
-            <option value="MetalRoughSpheresNoTextures/glTF/MetalRoughSpheresNoTextures.gltf">Metal Rough Spheres (No Textures)</option>
-          </optgroup>
-        </select>
+        <form id="form">
+          <select id="gltf-samples" class="dropdown" style="display: inline-block;">
+            <option value="">- Select -</option>
+            <!-- Core -->
+            <optgroup label="Core">
+              <option value="Avocado/glTF/Avocado.gltf">Avocado</option>
+              <option value="BoomBox/glTF/BoomBox.gltf">Boom Box</option>
+              <option value="FlightHelmet/glTF/FlightHelmet.gltf">Flight Helmet</option>
+              <option value="SciFiHelmet/glTF/SciFiHelmet.gltf Sci-Fi">Helmet</option>
+              <option value="Suzanne/glTF/Suzanne.gltf">Suzanne</option>
+              <option value="DamagedHelmet/glTF/DamagedHelmet.gltf">Damaged Helmet</option>
+              <option value="WaterBottle/glTF/WaterBottle.gltf">Water Bottle</option>
+            </optgroup>
+            <!-- Standard -->
+            <optgroup label="Standard">
+              <option value="Box/glTF/Box.gltf">Box</option>
+              <option value="BoxInterleaved/glTF/BoxInterleaved.gltf">Box Interleaved</option>
+              <option value="BoxTextured/glTF/BoxTextured.gltf">Box Textured</option>
+              <option value="BoxTextured/glTF-Embedded/BoxTextured.gltf">Box Textured (Embedded)</option>
+              <option value="Box%20With%20Spaces/glTF/Box%20With%20Spaces.gltf">Box With Spaces</option>
+              <option value="BoxVertexColors/glTF/BoxVertexColors.gltf">Box Vertex Colors</option>
+              <option value="AnimatedCube/glTF/AnimatedCube.gltf">Animated Cube</option>
+              <option value="Duck/glTF/Duck.gltf">Duck</option>
+              <option value="2CylinderEngine/glTF/2CylinderEngine.gltf">2 Cylinder Engine</option>
+              <option value="GearboxAssy/glTF/GearboxAssy.gltf">Gearbox Assy</option>
+              <option value="BoxAnimated/glTF/BoxAnimated.gltf">Box Animated</option>
+              <option value="CesiumMilkTruck/glTF/CesiumMilkTruck.gltf">Cesium Milk Truck</option>
+              <option value="RiggedSimple/glTF/RiggedSimple.gltf">Rigged Simple</option>
+              <option value="RiggedFigure/glTF/RiggedFigure.gltf">Rigged Figure</option>
+              <option value="BrainStem/glTF/BrainStem.gltf">Brain Stem</option>
+              <option value="Fox/glTF/Fox.gltf">Fox</option>
+              <option value="Sponza/glTF/Sponza.gltf">Sponza</option>
+            </optgroup>
+            <!-- Feature Tests -->
+            <optgroup label="Feature Tests">
+              <option value="OrientationTest/glTF/OrientationTest.gltf">Orientation Test</option>
+              <option value="MetalRoughSpheresNoTextures/glTF/MetalRoughSpheresNoTextures.gltf">Metal Rough Spheres (No Textures)</option>
+            </optgroup>
+          </select>
+          <span> OR </span>
+          <input type="text" name="url" placeholder="glTF url"/>
+          <button type="submit">load</button>
+        </form>
         <ul>
           <li><b>To rotate,</b> Drag with left mouse button</li>
           <li><b>To move camera,</b> Drag with middle mouse button</li>
